Finish Dad's website

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ api_token: # Enter API token here
 contact:
     phone: +52 868 891 0000
     emergency: ''
-    email: paco-0059@hotmail.com
+    email: drfranciscorubio@gmail.com
     address: Edificio Corporativo CMI Priv. Sergio Martinez Calderoni No. 11 Fracc. Victoria Secc. Fiesta Heroica Matamoros
 
 # Opening hours
